添加搜索功能

--- a/www/index.html
+++ b/www/index.html
@@ -30,7 +30,7 @@
                     <button class="button button-icon button-clear ion-navicon" ng-click="toggleLeft()"></button>
                 </ion-nav-buttons>
                 <ion-nav-buttons side="right">
-                    <button class="button button-icon button-clear ion-search" ng-click="SideMenus.openModal()"></button>
+                    <button class="button button-icon button-clear ion-search" ui-sref="tab.search"></button>
                 </ion-nav-buttons>
             </ion-nav-bar>
             <!-- 主页内容 -->
