--- a/www/index.html
+++ b/www/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
-    <title>偶看博客</title>
+    <title></title>
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
     <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
@@ -40,7 +40,7 @@
         <ion-side-menu side="left">
             <ion-header-bar class="bar bar-header bar-dark">
                 <a menu-close href="#/" class="button button-clear button-light">
-                    偶看博客
+                    {{websiteName}}
                 </a>
             </ion-header-bar>
             <ion-content has-header="true">
