--- a/www/index.html
+++ b/www/index.html
@@ -25,19 +25,19 @@
 <body ng-app="oukanblog" ng-controller="SideMenus">
     <ion-side-menus>
         <ion-pane ion-side-menu-content>
-            <!-- 顶部bar -->
+            <!-- 顶部bar topbar -->
             <ion-nav-bar class="bar bar-header bar-positive">
                 <ion-nav-buttons side="left">
                     <button class="button button-icon button-clear ion-navicon" ng-click="toggleLeft()"></button>
                 </ion-nav-buttons>
                 <ion-nav-buttons side="right">
-                    <button class="button button-icon button-clear ion-search" ui-sref="tab.search"></button>
+                    <button class="button button-icon button-clear" ui-sref="tab.share">Share</button>
                 </ion-nav-buttons>
             </ion-nav-bar>
-            <!-- 主页内容 -->
+            <!-- 主页内容 main content-->
             <ion-nav-view></ion-nav-view>
         </ion-pane>
-        <!-- 左边导航条 -->
+        <!-- 左边导航条 left sidebar-->
         <ion-side-menu side="left">
             <ion-header-bar class="bar bar-header bar-dark">
                 <a menu-close href="#/" class="button button-clear button-light">
@@ -52,7 +52,7 @@
                 </ion-list>
             </ion-content>
         </ion-side-menu>
-        <!-- 右边搜索 -->
+        <!-- 右边搜索 right search-->
         <ion-side-menu side="right">
             <ion-header-bar class="bar bar-header bar-dark" title="Search"></ion-header-bar>
             <ion-content has-header="true">
